[package]
name = "computation_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.0"
bevy_prototype_debug_lines = "0.10"
bevy_despawn_with = "0.15.0"
nalgebra = "0.32.2" 
rand = "0.8.5"